--- a/guestweb/common_css/font.less
+++ b/guestweb/common_css/font.less
@@ -102,11 +102,21 @@
     font-style: normal;
 }
 @font-face {
-    font-family: 'Gotham';
+    font-family: 'Gotham Book';
     src: url('/assets/type/Gotham/GothamBook.otf');
     src: url('/assets/type/Gotham/GothamBook.eot?#iefix') format('embedded-opentype'), 
     url('/assets/type/Gotham/GothamBook.woff') format('woff'), 
     url('/assets/type/Gotham/GothamBook.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Gotham Ultra';
+    src: url('/assets/type/Gotham/GothamUltra.otf');
+    src: url('/assets/type/Gotham/GothamUltra.eot?#iefix') format('embedded-opentype'), 
+    url('/assets/type/Gotham/GothamUltra.woff') format('woff'), 
+    url('/assets/type/Gotham/GothamUltra.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
