--- a/guestweb/common_css/public_ny/theme.less
+++ b/guestweb/common_css/public_ny/theme.less
@@ -9,7 +9,7 @@ body {
 
 body {
     background-color: #FFF;
-    font-family: "Gotham";
+    font-family: "Gotham Book";
 }
 
 .back-text {
@@ -18,10 +18,13 @@ body {
 
 .main-text,
 .btn {
-    text-transform: uppercase;
-    font-weight: bolder;
+    font-family: "Gotham Ultra" !important;
 }
 
+text-transform: uppercase;
+font-weight: bolder;
+
+}
 a,
 a:hover,
 .main-text,
@@ -31,20 +34,16 @@ a:hover,
 .phone-label {
     color: #363d40;
 }
-
 .sub-main-text {
     color: #363d40;
 }
-
 .header-bar {
     background: #fff;
 }
-
 .logo-image {
     max-width: 100%;
     margin: 4% auto 2%;
 }
-
 .template-text,
 .footer-text,
 .balance-amount,
@@ -54,11 +53,9 @@ a:hover,
 .error-text {
     color: #363d40;
 }
-
 .view-bill {
     color: #363d40;
 }
-
 .sub-text,
 .sub-text:hover,
 .query-text,
@@ -66,112 +63,89 @@ a:hover,
 .light-text {
     color: #363d40;
 }
-
 .btn,
 .btn:hover {
     background: #000;
     color: @white;
 }
-
 .dual-button {
     font-size: 26px;
     font-weight: 900;
 }
-
 .btn-template {
     font-size: 27px;
     font-weight: 900;
     padding: 6%;
 }
-
 .dark-button,
 .dark-button:hover {
     background: #000;
 }
-
 .light-button,
 .light-button:hover {
     background: #3F3F3F;
 }
-
 .checkouttime1,
 .checkouttime1:hover {
     background: #515151;
 }
-
 .checkouttime2,
 .checkouttime2:hover {
     background: #3F3F3F;
 }
-
 .checkouttime3,
 .checkouttime3:hover {
     background: #000;
 }
-
 .no-thanks,
 .no-thanks:hover {
     color: fff;
     text-decoration: underline;
     text-transform: none;
 }
-
 .strong-font {
     font-weight: 500;
 }
-
 .amount,
 .time {
     font-size: 30px;
     line-height: 1.2;
 }
-
 .down-arrow-button {
     background-image: url('/assets/guestweb/common_images/black/down_arrow.png');
 }
-
 .right-arrow-button {
     background-image: url('/assets/guestweb/common_images/black/right_arrow.png');
 }
-
 .upgrade-details .upgrades-btn {
     background: #000;
 }
-
 .proceed-to-checkin {
     background: #3D3D3B;
 }
-
 .upgrades-label {
     color: #BA7A55;
 }
 
-
 /*----------------- date picker -------------------------*/
-
 .pickadate-cell .pickadate-active.pickadate-outofrange-disabled a {
     color: #000;
     color: transparent;
 }
-
 .pickadate-cell .pickadate-enabled,
 .pickadate-centered-heading {
     color: #000;
 }
-
 .pickadate-cell .pickadate-active {
     background-color: #000 !important;
     color: #fff;
 }
-
 .pickadate-head {
     color: #000000;
 }
-
 .calendar-selection {
     color: #fff;
 }
-
 .pickadate-cell li:nth-child(1),
 .pickadate-cell li:nth-child(8),
 .pickadate-cell li:nth-child(15),
@@ -180,158 +154,144 @@ a:hover,
 .pickadate-cell li:nth-child(36) {
     border-left: 1px solid #fff;
 }
-
 .pickadate-cell .pickadate-disabled,
 .pickadate-cell .pickadate-enabled,
 .pickadate-cell .pickadate-outofrange-disabled {
     background-color: #EEEBE8;
 }
-
 .pickadate-cell .pickadate-disabled,
 .pickadate-cell .pickadate-disabled a {
     color: #ac9557;
 }
-
 .pickadate-cell li {
     border: 1px solid #FFF;
 }
-
 .pickadate a:visited,
 .pickadate a {
     color: #666666;
 }
-
 .date-picker-header {
     background-color: #000;
 }
-
 .calendar-back {
     background-image: url('/assets/guestweb/common_images/back_icon.png');
 }
-
 .calendar-done {
     background-image: url('/assets/guestweb/common_images/done_white.png');
 }
-
 .pickadate-prev,
 .pickadate-next,
 .pickadate-prev:hover,
 .pickadate-next:hover {
     color: #3F3F3F;
 }
-
 .date-picker-wrap {
     background-color: #fff;
 }
-
 .date-picker-bg {
     background: unset;
 }
-
 .horizontal-line-sep-mobile {
     border-top: 1px solid #9b9b9b;
 }
-
 .departure-date {
     color: #fff;
 }
-
 .date-text {
     color: #fff;
 }
-
 .logo-image {
     margin: 1% auto;
     max-width: unset;
 }
-
 .res-details-heading,
 .res-details-heading:hover {
     color: #3F3F3F;
 }
-
 .back-to-checkout {
     background: url(/assets/guestweb/common_images/black/left_arrow.png) center top no-repeat;
     height: 40px;
 }
-
 .row {
     margin-bottom: 21px;
 }
-
 .circle-bg {
     background: none;
 }
-
 .time {
     font-size: 57px;
     display: block;
 }
-
 .late-charge br {
     display: none;
 }
-
 .for {
     line-height: 0 !important;
     font-size: 10px;
     margin-right: 7px;
 }
-
 .amount {
     margin-top: -27px;
 }
-
 @media (max-width: 990px) {
     .logo-image {
         margin: 9% auto 7%;
         max-width: unset;
     }
+    
     .back-to-checkout {
         display: none;
     }
+    
     .btn-template,
     .dual-button {
         font-size: 17px;
     }
+    
     .main-text {
         font-size: 36px;
     }
+    
     .checkout-alone-button {
         float: left;
         margin-left: 129px;
     }
+    
     .sub-main-text {
         font-size: 20px;
     }
 }
-
-@media (min-width: 990px){
-  .main-text {
-   font-size: 28px;
-  } 
+@media (min-width: 990px) {
+    .main-text {
+        font-size: 28px;
+    }
 }
-
 @media (max-width: 480px) {
     .main-text {
         font-size: 8vw;
     }
+    
     .container {
         width: 100%;
     }
+    
     .sub-main-text {
         font-size: 5.4vw;
     }
+    
     .footer-text {
         font-size: 5.3vw;
     }
+    
     .logo-image {
         max-width: 200px;
         margin: 3% auto;
     }
+    
     .dual-button {
         font-size: 23px;
     }
+    
     .section-container {
         padding-bottom: 0px;
     }
