--- a/admin/partials/interfaces/LightSpeed/adLightSpedRestaurants.html
+++ b/admin/partials/interfaces/LightSpeed/adLightSpedRestaurants.html
@@ -33,6 +33,14 @@
                             label="{{'PASSWORD' | translate}}"
                             required="yes"
                             placeholder="{{'PASSWORD_PLACEHOLDER' | translate}}"></ad-textbox>
+                <ad-dropdown-name savemodel="state.new.company_id"
+                                  valueproperty="id"
+                                  label-in-drop-down="Select Company"
+                                  property="name"
+                                  list="companies"
+                                  label="{{'COMPANY'| translate}}"
+                                  div-class="full-width">
+                </ad-dropdown-name>
             </fieldset>
 
             <div class="actions float">
@@ -57,12 +65,16 @@
     <tbody>
     <tr ng-repeat="restaurant in lightspeed.restaurants track by $index" ng-hide="restaurant.isDeleted">
         <td data-item="1" data-title="'Restaurant Name'" ng-click="onSelect($index, mapping)"
-            header-class="width-30" ng-hide="state.selected === $index">
+            header-class="width-20" ng-hide="state.selected === $index">
             <a class="edit-data-inline">{{restaurant.name}}</a>
         </td>
         <td data-item="2" data-title="'User Name'" ng-click="onSelect($index, mapping)"
-            header-class="width-60" ng-hide="state.selected === $index">
+            header-class="width-40" ng-hide="state.selected === $index">
             <a class="edit-data-inline">{{restaurant.username}}</a>
+        </td>
+        <td data-item=3" data-title="'Company'" ng-click="onSelect($index, mapping)"
+            header-class="width-40" ng-hide="state.selected === $index">
+            <a class="edit-data-inline">{{getCompanyName(restaurant.company_id)}}</a>
         </td>
 
         <td header-class="width-10" data-title="'Delete'" class="delete"
@@ -70,7 +82,7 @@
             <a class="icons icon-delete large-icon" ng-click="onClickDelete(restaurant)"></a>
         </td>
 
-        <td colspan="3" ng-show="state.selected === $index">
+        <td colspan="4" ng-show="state.selected === $index">
             <div style="display: block;" id="add-new" class="edit-data">
                 <div class="data-holder">
                     <form class="form inline-form float">
@@ -96,6 +108,14 @@
                                         label="{{'PASSWORD' | translate}}"
                                         required="yes"
                                         placeholder="{{'PASSWORD_PLACEHOLDER' | translate}}"></ad-textbox>
+                            <ad-dropdown-name savemodel="restaurant.company_id"
+                                              valueproperty="id"
+                                              label-in-drop-down="Select Company"
+                                              property="name"
+                                              list="companies"
+                                              label="{{'COMPANY'| translate}}"
+                                              div-class="full-width">
+                            </ad-dropdown-name>
                         </fieldset>
 
                         <div class="actions float">
