--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1927,38 +1927,28 @@
 .jumper{
     position: absolute;
     top: 0;
+    >div{
+        overflow:scroll;
+        height:100%;   
+    }
 
     background-color: @brandColor;
 
-    width: 100%;
+    width: 35%;
     z-index:999;
-    height:150px;
+    height:100%;
     overflow:hidden;
     padding-right: 5px;
     padding-left: 5px;
-    >div>button{
-        position: absolute;
-        top: 35%;
-        background:none;
-        border:none;
-        font-size:1em;
-        color:blue;
-        left: .5%;
-        &.right-most{
-            left: 98%;
-        }
-    }
     border-color: @textColor;
     border-style: solid;
-    border-bottom-width: 2px;
-    border-right-width: 2px;
-    border-left-width: 2px;
-    border-bottom-left-radius: 2em;
+    border-width: 2px;
+    border-top-right-radius: 2em;
     border-bottom-right-radius: 2em;
+    border-left-width: 0px;
 }
 
 .jumper-box{
-    width:10%;
     min-width:150px;
     float: left;
     margin-left: 20px;
@@ -1967,17 +1957,15 @@
 .jumper-box:hover{
     opacity: 1;
     /*background-color: @headerIconsColor;*/
-    padding-top: 1px;
     cursor: pointer;
 
     background:
-        opacity: .7;
+    opacity: .7;
 }
 
 .jumper-no-wrap {
-    display: flex;
-    list-style: none;
-    overflow:auto;
+    overflow:scroll;
+    height:100%;
 }
 
 
