--- a/rover/partials/reports/shared/rvReportMainMenu.html
+++ b/rover/partials/reports/shared/rvReportMainMenu.html
@@ -3,9 +3,15 @@
         <i class="icon-report icon-all-reports"></i>
         <span class="title has-arrow next-view">View All Reports</span>
     </li>
-    <li ng-class="{'active': isReportView(reportViews[1]) || isReportView(reportViews[2])}" ng-click="switchReportView(reportViews[1])" ng-show="shouldShowScheduleReport()">
+    <li ng-class="{'active': isReportView(reportViews[1])}" ng-click="switchReportView(reportViews[1])" ng-show="shouldShowScheduleReport()">
         <i class="icon-report icon-schedule"></i>
         <span class="title has-arrow next-view">Scheduled Reports</span>
+    </li>
+
+    <!-- ng-show="shouldShowScheduleReport()" -->
+    <li ng-class="{'active': isReportView(reportViews[2])}" ng-click="switchReportView(reportViews[2])">
+        <i class="icon-report icon-schedule"></i>
+        <span class="title has-arrow next-view">Export Reports</span>
     </li>
     <!-- <li ng-class="{'active': selected}">
         <i class="icon-report icon-category"></i>
